tests/baselines/reference/letDeclarations-es5.errors.txt
tests/cases/compiler/letDeclarations-es5.ts(2,5): error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
tests/cases/compiler/letDeclarations-es5.ts(3,5): error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
tests/cases/compiler/letDeclarations-es5.ts(4,5): error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
tests/cases/compiler/letDeclarations-es5.ts(6,5): error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
tests/cases/compiler/letDeclarations-es5.ts(7,5): error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
tests/cases/compiler/letDeclarations-es5.ts(8,5): error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
tests/cases/compiler/letDeclarations-es5.ts(10,9): error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
tests/cases/compiler/letDeclarations-es5.ts(12,9): error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.


==== tests/cases/compiler/letDeclarations-es5.ts (8 errors) ====
    
    let l1;
        ~~
!!! error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
    let l2: number;
        ~~
!!! error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
    let l3, l4, l5 :string, l6;
        ~~
!!! error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
    
    let l7 = false;
        ~~
!!! error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
    let l8: number = 23;
        ~~
!!! error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
    let l9 = 0, l10 :string = "", l11 = null;
        ~~
!!! error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
    
    for(let l11 in {}) { }
            ~~~
!!! error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
    
    for(let l12 = 0; l12 < 9; l12++) { }
            ~~~
!!! error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
    